--- a/Association_Worker/Association_Miner.html
+++ b/Association_Worker/Association_Miner.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>Association Mining</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>Association_Miner</title><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 
 
@@ -14630,14 +14630,18 @@ ORDER BY ?s
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Flatten results into array of predicate object pairs per subjct</span>
+<span class="kn">import</span> <span class="nn">urllib.parse</span>
+
 <span class="n">triples</span> <span class="o">=</span> <span class="n">results</span><span class="p">[</span><span class="s1">&#39;results&#39;</span><span class="p">][</span><span class="s1">&#39;bindings&#39;</span><span class="p">]</span>
 <span class="n">current_subject</span> <span class="o">=</span> <span class="kc">None</span>
 <span class="n">matrix_of_pred_obj_pairs_all_subj</span> <span class="o">=</span> <span class="p">[]</span>
 <span class="n">array_of_pred_obj_pairs_per_subj</span> <span class="o">=</span> <span class="p">[]</span>
 <span class="k">for</span> <span class="n">triple</span> <span class="ow">in</span> <span class="n">triples</span><span class="p">:</span>
     <span class="k">if</span> <span class="n">current_subject</span> <span class="o">==</span> <span class="kc">None</span> <span class="ow">or</span> <span class="n">current_subject</span> <span class="o">!=</span> <span class="n">triple</span><span class="p">[</span><span class="s1">&#39;s&#39;</span><span class="p">][</span><span class="s1">&#39;value&#39;</span><span class="p">]:</span>
+        <span class="nb">print</span><span class="p">(</span><span class="n">triple</span><span class="p">[</span><span class="s1">&#39;s&#39;</span><span class="p">][</span><span class="s1">&#39;value&#39;</span><span class="p">])</span>
         <span class="c1"># Push this subjects pred obj pairs to the matrix</span>
         <span class="k">if</span> <span class="nb">len</span><span class="p">(</span><span class="n">array_of_pred_obj_pairs_per_subj</span><span class="p">)</span> <span class="o">&gt;</span> <span class="mi">0</span><span class="p">:</span>
+            <span class="nb">print</span><span class="p">(</span><span class="n">array_of_pred_obj_pairs_per_subj</span><span class="p">)</span>
             <span class="n">matrix_of_pred_obj_pairs_all_subj</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">array_of_pred_obj_pairs_per_subj</span><span class="p">)</span>
         
         <span class="c1"># Set new subject and clear subj pairs array</span>
@@ -14645,7 +14649,9 @@ ORDER BY ?s
         <span class="n">array_of_pred_obj_pairs_per_subj</span> <span class="o">=</span> <span class="p">[]</span>
     
     <span class="c1"># Add pred obj pairs to array</span>
-    <span class="n">array_of_pred_obj_pairs_per_subj</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">triple</span><span class="p">[</span><span class="s1">&#39;p&#39;</span><span class="p">][</span><span class="s1">&#39;value&#39;</span><span class="p">]</span> <span class="o">+</span> <span class="s1">&#39; &#39;</span> <span class="o">+</span> <span class="n">triple</span><span class="p">[</span><span class="s1">&#39;o&#39;</span><span class="p">][</span><span class="s1">&#39;value&#39;</span><span class="p">])</span>     
+    <span class="n">predicate</span> <span class="o">=</span> <span class="n">urllib</span><span class="o">.</span><span class="n">parse</span><span class="o">.</span><span class="n">unquote_plus</span><span class="p">(</span><span class="n">triple</span><span class="p">[</span><span class="s1">&#39;p&#39;</span><span class="p">][</span><span class="s1">&#39;value&#39;</span><span class="p">])</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;urn:&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">)</span>
+    <span class="nb">object</span> <span class="o">=</span> <span class="n">urllib</span><span class="o">.</span><span class="n">parse</span><span class="o">.</span><span class="n">unquote_plus</span><span class="p">(</span><span class="n">triple</span><span class="p">[</span><span class="s1">&#39;o&#39;</span><span class="p">][</span><span class="s1">&#39;value&#39;</span><span class="p">])</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="s1">&#39;urn:&#39;</span><span class="p">,</span> <span class="s1">&#39;&#39;</span><span class="p">)</span>
+    <span class="n">array_of_pred_obj_pairs_per_subj</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">predicate</span> <span class="o">+</span> <span class="s1">&#39; &#39;</span> <span class="o">+</span> <span class="nb">object</span><span class="p">)</span>   
 </pre></div>
 
      </div>
@@ -14669,12 +14675,16 @@ ORDER BY ?s
 <span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="kn">from</span> <span class="nn">mlxtend.preprocessing</span> <span class="kn">import</span> <span class="n">TransactionEncoder</span>
 <span class="kn">from</span> <span class="nn">mlxtend.frequent_patterns</span> <span class="kn">import</span> <span class="n">fpgrowth</span>
+<span class="kn">from</span> <span class="nn">IPython.display</span> <span class="kn">import</span> <span class="n">display</span><span class="p">,</span> <span class="n">HTML</span>
 
 <span class="n">te</span> <span class="o">=</span> <span class="n">TransactionEncoder</span><span class="p">()</span>
 <span class="n">te_ary</span> <span class="o">=</span> <span class="n">te</span><span class="o">.</span><span class="n">fit</span><span class="p">(</span><span class="n">matrix_of_pred_obj_pairs_all_subj</span><span class="p">)</span><span class="o">.</span><span class="n">transform</span><span class="p">(</span><span class="n">matrix_of_pred_obj_pairs_all_subj</span><span class="p">)</span>
 <span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">te_ary</span><span class="p">,</span> <span class="n">columns</span><span class="o">=</span><span class="n">te</span><span class="o">.</span><span class="n">columns_</span><span class="p">)</span>
 
-<span class="nb">print</span><span class="p">(</span><span class="n">fpgrowth</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">min_support</span><span class="o">=</span><span class="mf">0.6</span><span class="p">,</span> <span class="n">use_colnames</span><span class="o">=</span><span class="kc">True</span><span class="p">))</span>
+<span class="n">fpgrowth_df</span> <span class="o">=</span> <span class="n">fpgrowth</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">min_support</span><span class="o">=</span><span class="mf">0.002</span><span class="p">,</span> <span class="n">use_colnames</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+
+<span class="n">pd</span><span class="o">.</span><span class="n">set_option</span><span class="p">(</span><span class="s2">&quot;display.max_colwidth&quot;</span><span class="p">,</span> <span class="mi">10000</span><span class="p">)</span>
+<span class="n">fpgrowth_df</span><span class="p">[</span><span class="n">fpgrowth_df</span><span class="o">.</span><span class="n">itemsets</span><span class="o">.</span><span class="n">str</span><span class="o">.</span><span class="n">len</span><span class="p">()</span> <span class="o">&gt;</span> <span class="mi">1</span><span class="p">]</span>
 </pre></div>
 
      </div>
